--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="hero-decoration"></div>
-                    <img src="https://github.com/islmcafe/tanvia/blob/main/Tanvia.jpg" alt="Tanvia Anjuman Siddiq" class="profile-img">
+                    <img src="https://raw.githubusercontent.com/islmcafe/tanvia/refs/heads/main/Tanvia.jpg" alt="Tanvia Anjuman Siddiq" class="profile-img">
                 </div>
             </div>
         </div>
