--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo">TAS</div>
+            <div class="logo">TANVIA</div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -1011,13 +1011,16 @@
                         <a href="mailto:tanviaan@ualberta.ca" title="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
-                        <a href="#" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/tanvia-anjuman-siddiq-58903b384" title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://www.facebook.com/tanvia.ankita.9" title="Facebook">
+                            <i class="fab fa-facebook"></i>
                         </a>
                         <a href="#" title="ResearchGate">
                             <i class="fas fa-graduation-cap"></i>
                         </a>
-                        <a href="#" title="GitHub">
+                        <a href="https://github.com/Tanvia13" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
