Change PDF download links to placeholder
Updated PDF download links to use placeholder '#' instead of actual URLs.

--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
                         </div>
                     </div>
                     <div class="research-actions">
-                        <a href="https://drive.google.com/file/d/1crHKsvzG_CS2brQHnEtJoCV7BCovWBTD/view?usp=drive_link" class="pdf-btn" title="Download PDF">
+                        <a href="#" class="pdf-btn" title="Download PDF">
                             <i class="fas fa-file-pdf"></i>
                             PDF
                         </a>
@@ -1105,7 +1105,7 @@
                         </div>
                     </div>
                     <div class="research-actions">
-                        <a href="https://drive.google.com/file/d/16gccHpOkEOmc5EBz7d0qvBoYkRqvWq2d/view?usp=drive_link" class="pdf-btn" title="Download PDF">
+                        <a href="#" class="pdf-btn" title="Download PDF">
                             <i class="fas fa-file-pdf"></i>
                             PDF
                         </a>
@@ -1121,7 +1121,7 @@
                         </div>
                     </div>
                     <div class="research-actions">
-                        <a href="https://docs.google.com/document/d/1vdPOu0UQJBuOJPL8AoqUBnLn-12jyoKu/edit" class="pdf-btn" title="Download PDF">
+                        <a href="#" class="pdf-btn" title="Download PDF">
                             <i class="fas fa-file-pdf"></i>
                             PDF
                         </a>
